[package]
name = "blog-scan"
version = "0.1.0"
edition = "2021"
description = "a little script that scans blog post folder and generates meta information"

[dependencies]
argparse = "0.2.2"
chrono = "0.4.24"
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.9"
serde = "1.0"
serde_json = "1.0.96"
serde_yaml = "0.9"
walkdir = "2.3.3"
